WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263599
[WebGPU] Tests don't run correctly in WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=263599
Summary
[WebGPU] Tests don't run correctly in WebKitTestRunner
Mike Wyrzykowski
Reported
2023-10-24 10:31:08 PDT
[WebGPU] Tests don't run correctly in WebKitTestRunner
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-24 10:31:24 PDT
<
rdar://problem/117423898
>
Mike Wyrzykowski
Comment 2
2023-10-24 10:35:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19497
EWS
Comment 3
2023-10-24 11:34:02 PDT
Committed
269723@main
(eb5d0db0e1f8): <
https://commits.webkit.org/269723@main
> Reviewed commits have been landed. Closing PR #19497 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug