[WebGPU] Tests don't run correctly in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=263599 <radar://117423898>

Reviewed by Tadeu Zagallo.

In WK2 the port is not 127.0.0.1 and we still want tests to run.

* Tools/TestRunnerShared/TestFeatures.cpp:
(WTR::shouldEnableWebGPU):

Canonical link: https://commits.webkit.org/269723@main